# T20-World-Cup-Winner-Prediction-using-ML

./: .env.template  .gitignore  LIVE_MATCH_GUIDE.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.streamlit/: config.toml  secrets.toml  style.css
attached_assets/: ICC Rankings.xlsx  Logistic_Regression.ipynb  predictions.py  random forest.ipynb  t20i_bilateral.xlsx  venue_stats.xlsx  visualization.py
models/: cricket_data_collector.py  data_collector.py  data_processor.py  live_match_processor.py  ml_models.py  player_stats.py  real_time_collector.py  tournament_simulator.py
pages/: live_match.py  player_performance.py  predictions.py  team_analysis.py  team_comparison.py  tournament_simulation.py
utils/: config.py  database.py  generate_excel_files.py  styles.py  visualization.py
